--- a/screens/lista_cliente.html
+++ b/screens/lista_cliente.html
@@ -14,12 +14,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../assets/css/base/base.css" />
-    <link rel="stylesheet" href="../assets/css/componentes/header.css" />
-    <link rel="stylesheet" href="../assets/css/lista_cliente.css" />
+    <link rel="stylesheet" href="../assets/css/componentes/header.css">
+    <link rel="stylesheet" href="../assets/css/lista_cliente.css">
     
-    <link rel="stylesheet" href="../assets/css/componentes/button.css" />
-    <link rel="stylesheet" href="../assets/css/componentes/modal.css" />
-    <link rel="stylesheet" href="../assets/css/componentes/table.css" />
+    <link rel="stylesheet" href="../assets/css/componentes/button.css">
+    <link rel="stylesheet" href="../assets/css/componentes/modal.css">
+    <link rel="stylesheet" href="../assets/css/componentes/table.css">
   </head>
   <body>
     <header class="header container">
