--- a/screens/editar_cliente.html
+++ b/screens/editar_cliente.html
@@ -14,11 +14,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../assets/css/base/base.css" />
-    <link rel="stylesheet" href="../assets/css/componentes/header.css" />
-    <link rel="stylesheet" href="../assets/css/componentes/card.css" />
-    <link rel="stylesheet" href="../assets/css/register_client.css" />
-    <link rel="stylesheet" href="../assets/css/componentes/inputs.css" />
-    <link rel="stylesheet" href="../assets/css/componentes/button.css" />
+    <link rel="stylesheet" href="../assets/css/componentes/header.css">
+    <link rel="stylesheet" href="../assets/css/componentes/card.css">
+    <link rel="stylesheet" href="../assets/css/register_client.css">
+    <link rel="stylesheet" href="../assets/css/componentes/inputs.css">
+    <link rel="stylesheet" href="../assets/css/componentes/button.css">
   </head>
   <body>
     <header class="header container">
