--- a/screens/edicion_concluida.html
+++ b/screens/edicion_concluida.html
@@ -13,12 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../assets/css/base/base.css" />
-    <link rel="stylesheet" href="../assets/css/componentes/header.css" />
-    <link rel="stylesheet" href="../assets/css/edicion_concluida.css" />
-    <link rel="stylesheet" href="../assets/css/componentes/card.css" />
-    <link rel="stylesheet" href="../assets/css/componentes/inputs.css" />
-    <link rel="stylesheet" href="../assets/css/componentes/button.css" />
+    <link rel="stylesheet" href="../assets/css/base/base.css">
+    <link rel="stylesheet" href="../assets/css/componentes/header.css">
+    <link rel="stylesheet" href="../assets/css/edicion_concluida.css">
+    <link rel="stylesheet" href="../assets/css/componentes/card.css">
+    <link rel="stylesheet" href="../assets/css/componentes/inputs.css">
+    <link rel="stylesheet" href="../assets/css/componentes/button.css">
   </head>
   <body>
     <header class="header container">
