--- a/screens/lista_cliente.html
+++ b/screens/lista_cliente.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../assets/css/base/base.css" />
+    <link rel="stylesheet" href="../assets/css/base/base.css">
     <link rel="stylesheet" href="../assets/css/componentes/header.css">
     <link rel="stylesheet" href="../assets/css/lista_cliente.css">
     
